--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "react-boilerplate",
   "version": "3.5.0",
   "description": "A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices",
+  "homepage": "https://nguyenlamzx.github.io/my-app",
   "repository": {
     "type": "git",
-    "url": "git://github.com/react-boilerplate/react-boilerplate.git"
+    "url": "git://github.com/nguyenlamzx/my-app.git"
   },
   "engines": {
     "npm": ">=3",
     "node": ">=5"
   },
-  "author": "Max Stoiber",
+  "author": "Lam Nguyen",
   "license": "MIT",
   "scripts": {
     "analyze:clean": "rimraf stats.json",
@@ -42,6 +43,8 @@
     "test:clean": "rimraf ./coverage",
     "test": "cross-env NODE_ENV=test jest --coverage",
     "test:watch": "cross-env NODE_ENV=test jest --watchAll",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "lint-staged": {
@@ -241,6 +244,7 @@
     "reselect": "3.0.1",
     "sanitize.css": "4.1.0",
     "styled-components": "2.0.0",
+    "uuid": "^3.2.1",
     "warning": "3.0.0",
     "whatwg-fetch": "2.0.3"
   },
@@ -276,6 +280,7 @@
     "eventsource-polyfill": "0.9.6",
     "exports-loader": "0.6.4",
     "file-loader": "0.11.1",
+    "gh-pages": "^1.1.0",
     "html-loader": "0.4.5",
     "html-webpack-plugin": "2.29.0",
     "image-webpack-loader": "2.0.0",
